nullaway_error_A740F114-4820-4D8E-AF41-38EF47CDFC58.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/multipart/support/StandardMultipartHttpServletRequest.java:165: error: [NullAway] dereferenced expression this.multipartParameterNames is @Nullable
		if (this.multipartParameterNames.isEmpty()) {
		                                ^
    (see http://t.uber.com/nullaway )
